# pygeoapi-mapml-integration

./: .gitignore  README.md  pyproject.toml
demo-slides/: code-sprint-demo.md
src/pygeoapi_mapml_integration/: config.py  constants.py  features.py  main.py  middleware.py  schemas.py  utils.py
src/pygeoapi_mapml_integration/providers/: tiles.py
src/pygeoapi_mapml_integration/templates/collections/items/: item.mapml
src/pygeoapi_mapml_integration/templates/collections/tiles/: metadata.mapml
src/simple-html-client/: index.html  package.json
